# UsCode_SilverGuardian

./: .gitignore  README 복사본.md  README.md  capacitor.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/admin/: .gitignore  package.json
apps/admin/src/app/: layout.tsx  page.tsx
apps/admin/src/app/dashboard/: Map.tsx  page.tsx  table.tsx
apps/admin/src/app/dispatch/: CreatePatrol.tsx  PatrolContent.tsx  page.tsx
apps/admin/src/app/guardian/: GuardianContent.tsx  page.tsx
apps/admin/src/app/guardian/[id]/: page.tsx
apps/admin/src/components/: danger.tsx  navbar.tsx  topbar.tsx
apps/front/: .env  devup.json  next.config.ts  package.json  tsconfig.json
apps/front/src/: constants.ts
apps/front/src-tauri/: Cargo.toml  tauri.conf.json
apps/front/src/app/: layout.tsx  page.tsx
apps/front/src/app/(home)/: RefreshUser.tsx  layout.tsx
apps/front/src/app/(home)/home/: PatrolPanel.tsx  page.tsx
apps/front/src/app/(home)/patrol/: Map.tsx  page.tsx
apps/front/src/app/setting/: BackButton.tsx  ProfileCard.tsx  page.tsx
apps/front/src/components/: PatrolStartButton.tsx  QRCode.tsx  StartButton.tsx  motion.ts
apps/front/src/utils/: get-uuid.ts
ios/App/App/: Info.plist
server/: .dockerignore  Dockerfile  ai.py  ai_mcp.py  db.py  main.py  pyproject.toml  silverguardian.db
