[project]
name = "uscode-silverguardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.2",
    "ruff>=0.12.1",
    "uvicorn>=0.34.3",
]
