[project]
name = "uscode-silverguardian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.14",
    "fastmcp>=2.9.2",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.26",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.5.0",
    "langgraph-prebuilt>=0.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "qrcode[pil]>=8.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "alembic>=1.16.2",
    "ruff>=0.12.1",
    "uvicorn>=0.34.3",
]
